--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "onesignal-flet"
-version = "0.2.0"
-description = "Flutter OneSignal package integration for Python Flet."
+name = "flet-onesignal"
+version = "0.1.0"
+description = "Flutter FletOneSignal package integration for Python Flet."
 authors = ["brunobrown <brunobrown.86@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "onesignal_flet"}]
+packages = [{include = "flet-onesignal"}]
 
 classifiers = [
     "Topic :: Software Development :: Debuggers",
@@ -21,8 +21,8 @@ classifiers = [
 ]
 
 [tool.poetry.urls]
-"GitHub" = "https://github.com/brunobrown/onesignal-flet"
-"Bug Tracker" = "https://github.com/brunobrown/onesignal-flet/issues"
+"GitHub" = "https://github.com/brunobrown/flet-onesignal"
+"Bug Tracker" = "https://github.com/brunobrown/flet-onesignal/issues"
 
 [tool.poetry.dependencies]
 python = "^3.12"
