--- a/examples/flet_onesignal_example/pyproject.toml
+++ b/examples/flet_onesignal_example/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flet-onesignal-example"
-version = "1.0.0"
+version = "0.1.0"
 description = "flet-onesignal-example"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -10,7 +10,7 @@ authors = [
 
 dependencies = [
     "flet>=0.26.0",
-    "flet-onesignal @ file:///home/bruno_brown/PycharmProjects/flet-onesignal",
+    "flet-onesignal>=0.1.0",
 ]
 
 [tool.uv]
@@ -19,4 +19,4 @@ dev-dependencies = [
 ]
 
 [tool.flet.flutter.dependencies]
-flet_onesignal = "^0.0.1"
+flet_onesignal = "^0.0.2"
