adiciona a configuracao para que o pacote flutter seja incluido no build

--- a/examples/flet_onesignal_example/pyproject.toml
+++ b/examples/flet_onesignal_example/pyproject.toml
@@ -18,5 +18,8 @@ dev-dependencies = [
     "flet[all]>=0.26.0",
 ]
 
+[tool.poetry.group.dev.dependencies]
+flet = {extras = ["all"], version = "0.26.0"}
+
 [tool.flet.flutter.dependencies]
 flet_onesignal = "^0.0.2"
