--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flet-onesignal"
-version = "0.1.0"
+version = "0.2.0"
 description = "Flutter OneSignal package integration for Python Flet."
 readme = "README.md"
 authors = [
@@ -35,9 +35,12 @@ dev-dependencies = [
 ]
 
 [tool.setuptools]
-packages = ["flet_onesignal"]
-package-dir = {"" = "src"}
+#packages = ["flet_onesignal"]
+#package-dir = {"" = "src"}
 license-files = []
+
+[tool.setuptools.package-data]
+"flutter.flet_onesignal" = ["**/*"]
 
 [build-system]
 requires = ["setuptools"]
